--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "license": "MIT",
     "authors": [
         {
-            "name": ":Eduardo D",
+            "name": ":",
             "email": "rafael@martinezsoler.es",
             "homepage": "",
             "role": "Developer"
         }
     ],
     "require": {
-        "illuminate/support": "~5.1",
+        "illuminate/support": ">=4",
         "php" : ">=5.3.0"
     },
     "autoload": {
