--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rmartinezsoler/redsys",
+    "name": "ssheduardo/redsys-laravel",
     "description": "Package redsys for laravel 5.1",
     "keywords": ["payment", "pasarela", "lacaixa", "sabadell", "redsys", "tpv"],
     "homepage": "https://github.com/rmartinezsoler/redsys-laravel",
