--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ssheduardo/redsys-laravel",
+    "name": "rmartinezsoler/redsys-laravel",
     "description": "Package redsys for laravel 5.1",
     "keywords": ["payment", "pasarela", "lacaixa", "sabadell", "redsys", "tpv"],
     "homepage": "https://github.com/rmartinezsoler/redsys-laravel",
@@ -21,5 +21,5 @@
             "Ssheduardo\\Redsys\\": "src"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
